--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,10 @@ spring:
 
 mybatis:
   mapper-locations: classpath:/mapper/*.xml,classpath:/mapperExtension/*.xml
+
+swagger:
+  enable: true
+  application-name: ${spring.application.name}
+  application-version: 1.0
+  application-description: springfox swagger3
+  try-host: http://localhost:${server.port}
